--- a/source/asset/lang/en.yml
+++ b/source/asset/lang/en.yml
@@ -134,7 +134,10 @@ records:
     audio: Audio
 codelib:
   captions:
-    log: LOG
+    log: LOGS
     stack: STACK
   more: MORE
   less: LESS
+notification:
+  welcome: Welcome to my website!
+  browser: It's recommended to use the latest Google Chrome for browsing this website.
